--- a/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
+++ b/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
-    <Folder Include="Data\Seeds\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Domain\LinkDev.Talabat.Core.Domain.csproj" />
   </ItemGroup>
 
