added service manager class

--- a/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
+++ b/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LinkDev.Talabat.Core.Domain\LinkDev.Talabat.Core.Domain.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
