--- a/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
+++ b/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
+  </ItemGroup>
+
 </Project>
