--- a/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
+++ b/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
   </ItemGroup>
 
