--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StoreContext": "Server=.;Database=Talabat.APIs.G03;trusted_connection=true;trustservercertificate=true"
+  },
+  "Urls": {
+    "ApiBaseUrl": "https://localhost:7078"
   }
 }
  
