--- a/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
+++ b/LinkDev.Talabat.APIs.Controllers/LinkDev.Talabat.APIs.Controllers.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
