--- a/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
+++ b/LinkDev.Talabat.APIs/LinkDev.Talabat.APIs.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\LinkDev.Talabat.Application\LinkDev.Talabat.Core.Application.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Infrastructure.Persistence\LinkDev.Talabat.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\LinkDev.Talabat.Inftrastructure\LinkDev.Talabat.Inftrastructure.csproj" />
   </ItemGroup>
 
 </Project>
