--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreContext": "Server=.;Database=Talabat.APIs.G03;trusted_connection=true;trustservercertificate=true"
+    "StoreContext": "Server=.;Database=Talabat.APIs.G03;trusted_connection=true;trustservercertificate=true",
+    "Redis": "localhost"
   },
   "Urls": {
     "ApiBaseUrl": "https://localhost:7078"
