fixed redis & swagger configs

--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -12,6 +12,9 @@
   },
   "Urls": {
     "ApiBaseUrl": "https://localhost:7078"
+  },
+  "RedisSettings": {
+    "TimeToLiveInDays" : "16"
   }
 }
  
