db configuarations refactor

--- a/LinkDev.Talabat.APIs/appsettings.json
+++ b/LinkDev.Talabat.APIs/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StoreContext": "Server=.;Database=Talabat.APIs.G03;trusted_connection=true;trustservercertificate=true",
+    "IdentityContext": "Server=.;Database=Talabat.APIs.Identity.G03;trusted_connection=true;trustservercertificate=true",
     "Redis": "localhost"
   },
   "Urls": {
